--- a/src/containers/GenrePage/GenrePage.scss
+++ b/src/containers/GenrePage/GenrePage.scss
@@ -9,7 +9,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   width:100%;
-  height: 90vh;
+  height: 100%;
   padding-left: 25px;
   padding-right: 75px;
   -ms-overflow-style: none;
