--- a/src/containers/MovieView/MovieView.scss
+++ b/src/containers/MovieView/MovieView.scss
@@ -3,3 +3,13 @@ main.movie-view {
   height: 100%;
   max-height: 100vh;
 }
+
+.movie-container {
+  height: 100%;
+  overflow: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
